# git-toolkit

./: .editorconfig  .mise.toml  Cargo.toml  README.md
.config/: .cspell.json
.tasks/: tasks.rs.toml
crates/: .gitignore
crates/lib/conventional-commit/: .gitignore  Cargo.toml
crates/lib/conventional-commit/proptest-regressions/: errors.txt
crates/lib/conventional-commit/src/: errors.rs  footer.rs  lib.rs  person.rs  validation.rs
crates/lib/conventional-commit/src/model/: footer.rs  mod.rs  person.rs
docs/: .gitignore
docs/contributor/: .gitignore  techstrategy.md  vision.md
docs/contributor/roadmap/: 90-day-implementation-plan.md
