[workspace]
resolver = "3"
members = ["crates/bin/ticket"]

[workspace.package]
version = "0.1.0"
authors = [
	"Pierre Fouilloux",
	"Hibiscus Collective <collective@hibiscusgames.com>",
]
edition = "2024"
description = "Git Toolkit extends Git's user experience to be more friendly while integrating with conventional commits specification"
documentation = "https://github.com/HibiscusCollective/git-toolkit"
readme = "README.md"
homepage = "https://github.com/HibiscusCollective/git-toolkit"
repository = "https://github.com/HibiscusCollective/git-toolkit"
license = "AGPL-3.0-or-later"
keywords = ["git", "cli", "commit", "tool", "vcs"]
exclude = ["target/", "*.log", "*.tmp"]
include = ["src/**/*", "Cargo.toml", "README.md", "LICENSE"]
publish = true

[workspace.lints.clippy]
style = "deny"
complexity = "deny"
perf = "deny"
pedantic = "warn"

[workspace.dependencies]
