[package]
name = "conventional-commit"
keywords = ["git", "cli", "commit", "tool", "vcs"]
version.workspace = true
authors.workspace = true
edition.workspace = true
description.workspace = true
documentation.workspace = true
readme.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
exclude.workspace = true
include.workspace = true
publish.workspace = true

[dependencies]
derive_builder = "0.20.2"
thiserror = "2.0.12"

[lints]
workspace = true

[dev-dependencies]
anyhow = "1.0.98"
proptest = "1.6.0"
rstest.workspace = true
thiserror.workspace = true
